Simple markup & logo

--- a/google/src/index.html
+++ b/google/src/index.html
@@ -5,9 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Google</title>
+    <link rel="icon" type="image/x-icon" href="../assets/img/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <script src="index.js"></script>
+    <main>
+      <div class="main-container">
+        <img src="../assets/img/google-logo.png" id="logo-main" />
+
+        <div>
+          <input type="search" id="site-search" name="q" />
+
+          <div>
+            <button>Google Search</button>
+            <button>I'm Feeling Lucky</button>
+          </div>
+        </div>
+      </div>
+    </main>
   </body>
 </html>
